<?xml version="1.0"?>
<package format="3">
  <name>tablet_interface</name>
  <version>0.0.0</version>
  <description>Tablet interface input package.</description>
  <maintainer email="user@todo.todo">TODO: Maintainer</maintainer>
  <license>TODO: License</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>extender_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
